small screen responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
       <p class="big-screen-header" id="conference">
         TNW Conference: face to face business, it’s happening →
       </p>
-      <div class="medium-screen-header"></div>
+      <div class="medium-screen-header">
+        <div class="svg-container">
+          <svg>
+            <path
+              d="M32.23993 5A6.00284 6.00284 0 0 1 34 9.24261V16h-6v-5.929a2.00249 2.00249 0 0 0-.58856-1.41424l-2.07239-2.07101A2.00315 2.00315 0 0 0 23.92346 6H22v10h-6V0h8.75189a6 6 0 0 1 4.24268 1.75739zM60 0v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 55.9234 10h-2.88214A5.99166 5.99166 0 0 0 54 6.75732V0h-6v5.929a2.00245 2.00245 0 0 1-.58856 1.41418l-2.07385 2.071A1.99969 1.99969 0 0 1 43.9234 10H42V0h-6v16h8.75189a6.003 6.003 0 0 0 4.244-1.75739L51 12.23938V16h5.75189a6.003 6.003 0 0 0 4.244-1.75739l3.244-3.24267A6.00264 6.00264 0 0 0 66 6.75732V0zM0 6h4v10h6V6h4V0H0z"
+            ></path>
+          </svg>
+        </div>
+      </div>
     </header>
     <main>
       <section class="flex-container" id="icon-big">
@@ -50,19 +58,76 @@
         <p>The heart of tech</p>
       </section>
 
-      <section class="grid-container" id="highlight">
-        <div class="highlight-item" id="one">
-          <a
-            href="https://thenextweb.com/news/this-ev-drove-710km-on-a-single-charge-range-recond-lightyear-one"
-          >
-            <img src="img/highlight-1.jpeg" alt="" />
-            <div class="highlight-text">
-              <p>shifting</p>
-              <p>This EV drove a record-breaking 710km on a single charge</p>
+      <section id="highlight">
+        <div class="scroll-container">
+          <div class="grid-container">
+            <div class="highlight-item" id="one">
+              <a
+                href="https://thenextweb.com/news/this-ev-drove-710km-on-a-single-charge-range-recond-lightyear-one"
+              >
+                <img src="img/highlight-1.jpeg" alt="" />
+                <div class="highlight-text">
+                  <p>shifting</p>
+                  <p>
+                    This EV drove a record-breaking 710km on a single charge
+                  </p>
+                </div>
+              </a>
             </div>
-          </a>
+            <div class="highlight-item" id="two">
+              <img src="img/highlight-2.jpeg" alt="" />
+              <div class="highlight-text">
+                <p>
+                  TNW Conference is back IN-PERSON<br />
+                  Join the world's most intimate tech festival
+                </p>
+                <a href="https://thenextweb.com/conference">get tickets</a>
+              </div>
+            </div>
+            <div class="highlight-item" id="three">
+              <a
+                href="https://thenextweb.com/news/lemond-prolog-dutch-ebikes-hands-on"
+              >
+                <img src="img/highlight-3.jpeg" alt="" />
+                <div class="highlight-text">
+                  <p>hands-on</p>
+                  <p>
+                    LeMond's carbon fiber ebikes are lightweight works of art
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="highlight-item" id="four">
+              <a
+                href="https://thenextweb.com/news/5-reasons-why-you-have-to-attend-tnw-conference-2021"
+              >
+                <img src="img/highlight-4.jpeg" alt="" />
+                <div class="highlight-text">
+                  <p>tnw2021</p>
+                  <p>
+                    5 reasons why you should have to attend TNW Conference this
+                    year
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="highlight-item" id="five">
+              <a
+                href="https://thenextweb.com/news/universe-may-have-doppelganger-white-holes-black-stars"
+              >
+                <img src="img/highlight-5.jpeg" alt="" />
+                <div class="highlight-text">
+                  <p>neural</p>
+                  <p>
+                    Our universe may have doppelganger full of white holes and
+                    black stars
+                  </p>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="highlight-item" id="two">
+        <div class="highlight-item small-screen">
           <img src="img/highlight-2.jpeg" alt="" />
           <div class="highlight-text">
             <p>
@@ -71,44 +136,6 @@
             </p>
             <a href="https://thenextweb.com/conference">get tickets</a>
           </div>
-        </div>
-        <div class="highlight-item" id="three">
-          <a
-            href="https://thenextweb.com/news/lemond-prolog-dutch-ebikes-hands-on"
-          >
-            <img src="img/highlight-3.jpeg" alt="" />
-            <div class="highlight-text">
-              <p>hands-on</p>
-              <p>LeMond's carbon fiber ebikes are lightweight works of art</p>
-            </div>
-          </a>
-        </div>
-        <div class="highlight-item" id="four">
-          <a
-            href="https://thenextweb.com/news/5-reasons-why-you-have-to-attend-tnw-conference-2021"
-          >
-            <img src="img/highlight-4.jpeg" alt="" />
-            <div class="highlight-text">
-              <p>tnw2021</p>
-              <p>
-                5 reasons why you should have to attend TNW Conference this year
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="highlight-item" id="five">
-          <a
-            href="https://thenextweb.com/news/universe-may-have-doppelganger-white-holes-black-stars"
-          >
-            <img src="img/highlight-5.jpeg" alt="" />
-            <div class="highlight-text">
-              <p>neural</p>
-              <p>
-                Our universe may have doppelganger full of white holes and black
-                stars
-              </p>
-            </div>
-          </a>
         </div>
       </section>
       <section id="popular">
@@ -162,63 +189,79 @@
         <div class="flex-container">
           <div class="latest-item">
             <img src="img/latest-1.jpeg" alt="" />
-            <p class="story-title">
-              Politicians and scientists manipulate us with surveys – AI could
-              stop them
-            </p>
-            <p class="story-time">3 hours ago</p>
+            <div>
+              <p class="story-title">
+                Politicians and scientists manipulate us with surveys – AI could
+                stop them
+              </p>
+              <p class="story-time">3 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-2.jpeg" alt="" />
-            <p class="story-title">
-              Good riddance, Twitter Fleets, you sucked from the start
-            </p>
-            <p class="story-time">4 hours ago</p>
+            <div>
+              <p class="story-title">
+                Good riddance, Twitter Fleets, you sucked from the start
+              </p>
+              <p class="story-time">4 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-3.webp" alt="" />
-            <p class="story-title">
-              Android 12 Beta 3 uses AI to fix janky rotation once and for all
-            </p>
-            <p class="story-time">4 hours ago</p>
+            <div>
+              <p class="story-title">
+                Android 12 Beta 3 uses AI to fix janky rotation once and for all
+              </p>
+              <p class="story-time">4 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-4.jpeg" alt="" />
-            <p class="story-title">
-              Amazon’s new Kindle Vella could be a boom for serialized fiction,
-              but authors beware
-            </p>
-            <p class="story-time">6 hours ago</p>
+            <div>
+              <p class="story-title">
+                Amazon’s new Kindle Vella could be a boom for serialized
+                fiction, but authors beware
+              </p>
+              <p class="story-time">6 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-5.jpeg" alt="" />
-            <p class="story-title">
-              Yes, there’s an EV charging ‘etiquette’ — so listen up
-            </p>
-            <p class="story-time">9 hours ago</p>
+            <div>
+              <p class="story-title">
+                Yes, there’s an EV charging ‘etiquette’ — so listen up
+              </p>
+              <p class="story-time">9 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-6.jpeg" alt="" />
-            <p class="story-title">
-              This training can help you prepare for 11 vital CompTIA
-              certifications for under $70
-            </p>
-            <p class="story-time">11 hours ago</p>
+            <div>
+              <p class="story-title">
+                This training can help you prepare for 11 vital CompTIA
+                certifications for under $70
+              </p>
+              <p class="story-time">11 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-7.jpeg" alt="" />
-            <p class="story-title">
-              Don’t sleep on these 10 cool gadgets for getting the most out of
-              your summer
-            </p>
-            <p class="story-time">11 hours ago</p>
+            <div>
+              <p class="story-title">
+                Don’t sleep on these 10 cool gadgets for getting the most out of
+                your summer
+              </p>
+              <p class="story-time">11 hours ago</p>
+            </div>
           </div>
           <div class="latest-item">
             <img src="img/latest-8.webp" alt="" />
-            <p class="story-title">
-              The DaVinci IQC is a weed vape that does everything right
-            </p>
-            <p class="story-time">11 hours ago</p>
+            <div>
+              <p class="story-title">
+                The DaVinci IQC is a weed vape that does everything right
+              </p>
+              <p class="story-time">11 hours ago</p>
+            </div>
           </div>
         </div>
         <a href="#" class="more flex-container">
@@ -368,7 +411,9 @@
         </div>
       </div>
       <div id="footer-bottom">
-        <p>TNW is a <span id="financial-times">Financial Times</span> company.</p>
+        <p>
+          TNW is a <span id="financial-times">Financial Times</span> company.
+        </p>
         <p>
           Copyright © 2006—2021, The Next Web B.V. Made with &lt3 in Amsterdam.
         </p>
